# opticore

./: .gitignore  AGENT.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  HANDOFF_TO_CLAUDE_CODE.md  LICENSE  README.md  RELEASING.md  ROADMAP.md  TEST_RESULTS.md  build_and_test.sh  llms.txt  pyproject.toml
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/decisions/: 0001-nanobind-over-pybind11.md  0002-nan-propagation-not-exceptions.md  0003-newton-raphson-iv-solver.md  0004-ephemeral-ibkr-connection.md  0005-apache-2-license.md  README.md
examples/: 01_price_one_option.py  02_implied_vol.py  03_chain_with_sample_data.py  04_strategy_payoff.py
include/opticore/: bsm.hpp  greeks.hpp  jaeckel.hpp  math.hpp
notebooks/: 01_quickstart.ipynb  02_ibkr_setup.ipynb  03_yfinance_tutorial.ipynb  rough.ipynb
python/opticore/: __init__.py  __init__.pyi  _core.pyi  chain.py  chain.pyi  plot.py  plot.pyi
python/opticore/data/: __init__.py  ibkr.py  sample.py  sample_chain.csv  sample_chain.parquet  yfinance_adapter.py
scripts/: build_sample_chain.py
src/: bindings.cpp  bsm.cpp  greeks.cpp  jaeckel.cpp
tests/cpp/: reference_values.hpp  test_accuracy.cpp  test_bsm.cpp  test_greeks_accuracy.cpp  test_iv_accuracy.cpp  test_pricing_accuracy.cpp
tests/python/: test_accuracy.py  test_benchmarks.py  test_chain.py  test_iv_roundtrip.py  test_parity.py  test_plot.py  test_pricing.py  test_properties.py  test_sample_provider.py  test_yfinance_adapter.py
tests/python/typing/: check_strict_api.py
